# pytetris

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py  settings.py  shapes.py  style.css  tetris.py
src/tests/: test_shapes.py
