[tool.poetry]
name = "pytetris-101"
version = "0.0.2"
description = ""
authors = ["Sergey Royz <zjor.se@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.30.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
demo-cli = "src.tetris:main"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
